# esp-bmgr-py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
esp_bmgr_py/: __init__.py  idf_injector.py
ext/: idf_ext.py
